<resources>
    <string name="app_name">UserLayout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Back</string>

    <string name="username1">Username</string>
    <string name="password">........</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="newhere">New Here? </string>

    <string name="respstat">RESPONSE STATISTICS</string>
    <string name="timeper">Time Period</string>
    <string name="forma">Form A</string>
    <string name="formb">Form B</string>
    <string name="formc">Form C</string>
    <string name="formd">Form D</string>

    <string name="language">Language</string>
    <string name="recordLoc">Record Location</string>
    <string name="autosync">Auto-Sync</string>
    <string name="privacy">Privacy Policy</string>
    <string name="aboutbook">About KarmaBook</string>
    <string name="logout">Logout</string>

    <string name="surveys">Forms</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="changepassword">ChangePassword</string>
    <string name="setlang">Language</string>
    <string name="mdwo">Manual data sync when online</string>
    <string name="mlu">Manual location update</string>
    <string name="onliner">Online Response</string>
    <string name="offliner">Offline Response</string>
    <string name="incompr">Incomplete Response</string>
    <string name="form">Form</string>
    <string name="selectlang">Please Select Language</string>
    <string name="getlocation">Get Current Location</string>

    <string name="signup"> Sign Up</string>
    <string name="useremail">Username or Email</string>
    <string name="orgid">Organisation Id</string>
    <string name="pass">Password</string>
    <string name="confirnpass">Confirm Password</string>
    <string name="alreadyacc">Already have an account? </string>
    <string name="signin"> Sign In</string>

    <string name="surveyhead">Personal Details</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>

    <string name="surveyreport">Survey Report</string>
    <string name="nutreport">Nutrition report</string>
    <string name="referral">Referral</string>
    <string name="disease">Disease</string>
    <string name="pcbmedicines">Prescribed Medicines</string>

    <string-array name="forms">
        <item>Form 1</item>
        <item>Form 2</item>
        <item>Form 3</item>
        <item>Form 4</item>
        <item>Form 5</item>
        <item>Form 6</item>
        <item>Form 7</item>
        <item>Form 8</item>
        <item>Form 9</item>
    </string-array>

</resources>
