<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stabstudio.userlayout.SignUpActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textColor="#ffffff"
        android:text="@string/signup"
        android:textAlignment="center"
        android:layout_margin="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#F27227"
                android:text="@string/useremail"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textAlignment="center"
                android:text="shikhaagarwal"
                android:textColor="#FFFFFF"
                android:background="@drawable/transback"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#A2ACAD"
                android:layout_above="@+id/signupr"
                android:layout_alignParentStart="true"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#F27227"
                android:text="@string/orgid"
                android:textAlignment="center"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="shikhagarwal@gmail.com"
                android:textSize="14dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:background="@drawable/transback"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#A2ACAD"
                android:layout_above="@+id/signupr"
                android:layout_alignParentStart="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#F27227"
                android:text="@string/pass"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:text="cbsvbdksv"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:inputType="numberPassword"
                android:background="@drawable/transback"
                android:layout_marginBottom="15dp"
                android:layout_weight="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#A2ACAD"
                android:layout_above="@+id/signupr"
                android:layout_alignParentStart="true"
             />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#F27227"
                android:text="@string/confirnpass"
                android:textAlignment="center"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:text="vjhsfjbvdk"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:inputType="numberPassword"
                android:background="@drawable/transback"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#A2ACAD"
                android:layout_above="@+id/signupr"
                android:layout_alignParentStart="true" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/round_button"
            android:id="@+id/signupbutton"
            android:text="@string/signup"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:id="@+id/signupr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            >


            <TextView
                android:id="@+id/not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyacc"
                android:textColor="#A2ACAD"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="#F27227"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="3dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>