<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/formid">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:src="@drawable/form"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Form A"
            android:id="@+id/formname"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/onlineresp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView2"
            android:src="@drawable/online"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/onliner"
            android:id="@+id/textView2"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/offlineresp" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView3"
            android:src="@drawable/offline"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/offliner"
            android:id="@+id/textView3"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/incomresp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView4"
            android:src="@drawable/incomplete"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/incompr"
            android:id="@+id/textView4"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>